// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the languages facet with the selected languages 1`] = `
<Filter
  facet={
    Object {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Flex",
            "value": "flex",
          },
          Object {
            "label": "PHP",
            "value": "php",
          },
          Object {
            "label": "Python",
            "value": "py",
          },
        ]
      }
      property="languages"
      query={
        Object {
          "languages": Array [
            "java",
            "cs",
          ],
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    Array [
      "java",
      "cs",
      "js",
    ]
  }
  property="languages"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
  value={
    Array [
      "java",
      "cs",
    ]
  }
/>
`;

exports[`should render the languages facet with the selected languages 2`] = `
<div
  className="search-navigator-facet-box"
  data-key="languages"
>
  <FilterHeader
    name="projects.facets.languages"
  />
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <button
      aria-label="projects.facets.label_text_x.projects.facets.languages.Java"
      className="facet search-navigator-facet projects-facet button-link active"
      data-key="java"
      key="java"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        <SearchableFilterOption
          option={
            Object {
              "key": "java",
              "name": "Java",
            }
          }
          optionKey="java"
        />
      </span>
      <span
        className="facet-stat"
      >
        39
      </span>
    </button>
    <button
      aria-label="projects.facets.label_text_x.projects.facets.languages.C#"
      className="facet search-navigator-facet projects-facet button-link active"
      data-key="cs"
      key="cs"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        <SearchableFilterOption
          option={
            Object {
              "key": "cs",
              "name": "C#",
            }
          }
          optionKey="cs"
        />
      </span>
      <span
        className="facet-stat"
      >
        4
      </span>
    </button>
    <button
      aria-label="projects.facets.label_text_x.projects.facets.languages.JavaScript"
      className="facet search-navigator-facet projects-facet button-link"
      data-key="js"
      key="js"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="facet-name"
      >
        <SearchableFilterOption
          option={
            Object {
              "key": "js",
              "name": "JavaScript",
            }
          }
          optionKey="js"
        />
      </span>
      <span
        className="facet-stat"
      >
        1
      </span>
    </button>
  </div>
  <SearchableFilterFooter
    onQueryChange={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Flex",
          "value": "flex",
        },
        Object {
          "label": "PHP",
          "value": "php",
        },
        Object {
          "label": "Python",
          "value": "py",
        },
      ]
    }
    property="languages"
    query={
      Object {
        "languages": Array [
          "java",
          "cs",
        ],
      }
    }
  />
</div>
`;

exports[`should render the languages without the ones in the facet 1`] = `
<Filter
  facet={
    Object {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Flex",
            "value": "flex",
          },
          Object {
            "label": "PHP",
            "value": "php",
          },
          Object {
            "label": "Python",
            "value": "py",
          },
        ]
      }
      property="languages"
      query={
        Object {
          "languages": null,
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    Array [
      "java",
      "cs",
      "js",
    ]
  }
  property="languages"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
/>
`;
